# Nexus-QuantumI2A2

./: 00_suite.manifest.json  01_repo_discovery.json  02_backend_audit.json  02a_fiscal_contracts.json  03_multiagent_arch_audit.json  04_frontend_performance.json  05_uiux_accessibility.json  06_security_hardening.json  07_tests_validation.json  08_performance_observability.json  09_cicd_integration.json  10_reporting_telemetry.json  11_risk_register.json  App.tsx  Dockerfile  README.md  cypress.config.ts  eslint.config.mjs  index.html  jest.config.cjs  jest.config.ts  jest.setup.ts  metadata.json  package-lock.json  package.json  performance_evaluator.py  scripts_run_codex_suite.py  tsconfig.json  types.ts  validator.py  vite.config.ts
backend/: .env.dev  .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  setup.cfg
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_add_classification_corrections.py
backend/app/: __init__.py  api.py  auth.py  celery_app.py  config.py  crud.py  database.py  graphql_schema.py  main.py  middleware.py  models.py  orchestrator.py  progress.py  storage.py  telemetry.py
backend/app/agents/: __init__.py  accountant.py  auditor.py  base.py  classifier.py  cross_validator.py  extractor.py  intelligence.py
backend/app/api/: __init__.py  audit.py  export.py  main.py  monitoring.py
backend/app/connectivity_validator/: __init__.py  checks.py  manifest_loader.py  (+1 more)
backend/scripts/: seed.py
backend/tests/: __init__.py  test_analysis_contract.py  test_session_endpoint.py
(+241 files in other folders)
