[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-backend"
version = "0.1.0"
description = "Backend FastAPI para Nexus-QuantumI2A2"
authors = [
  { name = "Nexus Team" }
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "celery>=5.3",
  "redis>=5.0",
  "kombu>=5.3",
  "boto3>=1.34",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-exporter-otlp>=1.24",
  "tenacity>=8.2",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
  "mypy>=1.7",
  "ruff>=0.1",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "black>=24.0",
  "isort>=5.12"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "Q", "W"]
ignore = ["E203", "E266", "E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

